--- a/Romanian/main/miuisystem.apk/res/values-ro/strings.xml
+++ b/Romanian/main/miuisystem.apk/res/values-ro/strings.xml
@@ -24,7 +24,9 @@
     <string name="device_xiaomi">Telefon Mi</string>
     <string name="edit_frequent_phrases">Editați expresiile frecvente</string>
     <string name="frequent_phrases_des">Introduceți expresii utilizate frecvent dintr-o atingere</string>
-    <string name="frequent_phrases_size_exceeded">Se pot adăuga maxim 10 expresii frecvente. Ștergeți-le pe cele inutile pentru a putea adăuga altele.</string>
+    <string name="frequent_phrases_size_exceeded">Se pot adăuga maxim %1$d expresii frecvente. Ștergeți-le pe cele inutile pentru a putea adăuga altele.</string>
+    <string name="glockenspiel">Glockenspiel</string>
+    <string name="lollipop">Lollipop</string>
     <string name="menu_add_frequent_phrases">Adăugați</string>
     <string name="menu_delete">Ștergeți</string>
     <string name="menu_edit">Editați</string>
@@ -43,5 +45,5 @@
     <string name="yellow_page_sms_disabled_in_privacy_mode">Nu se pot trimite mesaje în modul Vizitator</string>
     <string name="yellow_page_sms_send_failed">Nu s-a putut trimite mesajul SMS</string>
     <string name="yellow_page_sms_sending">Trimitere…</string>
-    <string name="yellow_page_unable_send_sms">Nu se poate trimite mesajul SMS</string>
+    <string name="yellow_page_unable_send_sms">"Nu se poate trimite mesajul SMS"</string>
 </resources>
