--- a/Romanian/main/GuardProvider.apk/res/values-ro/strings.xml
+++ b/Romanian/main/GuardProvider.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="AVL">AVL</string>
     <string name="Avast">Avast</string>
