--- a/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
+++ b/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="accept_modify_call_request_prompt">Acceptați modificarea solicitării de apel?</string>
     <string name="add_vm_number_str">Adăugaţi numărul</string>
