--- a/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
-    <string name="access_sd_fail">Nu se poate accesa cardul SD</string>
+    <string name="access_sd_fail">Nu se poate accesa stocarea USB</string>
     <string name="accessibility_audio_shutter_bg">Fundal audio la declanșare</string>
     <string name="accessibility_camera_picker">Comutați între camera frontală și cea posterioară</string>
     <string name="accessibility_effect_mode_button">Buton efecte</string>
@@ -78,10 +78,12 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="face_beauty_intelligent_level_2">Mediu</string>
     <string name="face_beauty_intelligent_level_3">Ridicat</string>
     <string name="face_beauty_smart">Inteligent</string>
+    <string name="groupshot_mode_use_hint">"Se vor realiza mai multe fotografii pentru a selecta cea mai bună
+expresie facială de sintetizat într-o fotografie"</string>
     <string name="image_file_name_format">"'IMG'_yyyyMMdd_HHmmss"</string>
     <string name="message_snap_double_confirm">Actualmente apăsarea lungă a butonului de volum activează modul NFC. Modificați această acțiune?</string>
     <string name="no_storage">Introduceţi un card SD.</string>
-    <string name="not_enough_space">Cardul SD este plin</string>
+    <string name="not_enough_space">Stocarea internă este plină</string>
     <string name="object_track_enable_toast">Pentru a selcta un obiect, apăsați simultan două puncte de pe diagonala conturului.</string>
     <string name="pano_file_name_format">"'PANO'_yyyyMMdd_HHmmss"</string>
     <string name="pano_how_to_use_prompt_align_reference_line">Aliniați săgeata cu linia de referință</string>
@@ -94,8 +96,6 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_audio_focus_entry_general">Normal</string>
     <string name="pref_audio_focus_entry_rear">În spate</string>
     <string name="pref_audio_focus_title">Focusare audio</string>
-    <string name="pref_audio_indicator_entry_off">Audio oprit</string>
-    <string name="pref_audio_indicator_entry_on">Audio pornit</string>
     <string name="pref_burst_shoot_title">Fotografiere în serie</string>
     <string name="pref_camcorder_settings">Video</string>
     <string name="pref_camcorder_settings_category">Setări cameră</string>
@@ -130,9 +130,9 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_camera_coloreffect_entry_light_tunnel">Tunel</string>
     <string name="pref_camera_coloreffect_entry_long_face">Dilatare</string>
     <string name="pref_camera_coloreffect_entry_mirror">Oglindă</string>
-    <string name="pref_camera_coloreffect_entry_mono">Alb-negru</string>
+    <string name="pref_camera_coloreffect_entry_mono">Monocrom</string>
     <string name="pref_camera_coloreffect_entry_mosaic">Mozaic</string>
-    <string name="pref_camera_coloreffect_entry_negative">Negativ</string>
+    <string name="pref_camera_coloreffect_entry_negative"/>Negativ</string>
     <string name="pref_camera_coloreffect_entry_none">Normal</string>
     <string name="pref_camera_coloreffect_entry_posterize">Posterizare</string>
     <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
@@ -167,7 +167,7 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_camera_exposuretime_entry_auto">Automat</string>
     <string name="pref_camera_face_info_watermark_title">Adaugă informațiile despre vârstă în fotografii</string>
     <string name="pref_camera_facedetection_title">Detectare faţă</string>
-    <string name="pref_camera_fisheye_title">Ochi de peşte</string>
+    <string name="pref_camera_flashmode_default">auto</string>
     <string name="pref_camera_flashmode_entry_auto">Automat</string>
     <string name="pref_camera_flashmode_entry_off">Dezactivat</string>
     <string name="pref_camera_flashmode_entry_on">Activat</string>
@@ -212,7 +212,7 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_camera_magic_mirror_title">Oglindă magică</string>
     <string name="pref_camera_manual_mode_title">Manual</string>
   <string name="pref_camera_mono_mode_title">Alb-negru</string>
-    <string name="pref_camera_movie_solid_title">Film solid</string>
+    <string name="pref_camera_movie_solid_title">Stabilizare imagine</string>
     <string name="pref_camera_multilevel_entry_high">Ridicat</string>
     <string name="pref_camera_multilevel_entry_higher">Superior</string>
     <string name="pref_camera_multilevel_entry_highest">Suprem</string>
@@ -368,7 +368,7 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="pref_video_time_lapse_frame_interval_entry_90">Interval de 3 secunde (90 ori)</string>
     <string name="pref_video_time_lapse_frame_interval_entry_900">Interval de 30 secunde (900 ori)</string>
     <string name="pref_video_time_lapse_frame_interval_title">Interval de timp</string>
-    <string name="preparing_sd">Verificare card SD…</string>
+    <string name="preparing_sd">Verificare stocare internă…</string>
     <string name="record_back_pressed_hint">Atingeţi din nou pentru a opri înregistrarea</string>
     <string name="search_settings">Setări cameră;Calitate;Calitatea imaginii;Localizare fotografie;Localizare imagine;Detectare față;Sunete cameră</string>
     <string name="see_qrcode_detals">Vizualizaţi detaliile codului QR</string>
@@ -379,13 +379,12 @@ Distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri"</strin
     <string name="simple_mode_button_text_delay_capture">Dezactivaţi temporizatorul</string>
     <string name="simple_mode_button_text_face_beauty">Dezactivaţi înfrumusețarea</string>
     <string name="simple_mode_button_text_fast_video">Dezactivaţi mişcarea lentă</string>
-    <string name="simple_mode_button_text_fisheye">Dezactivaţi Ochi de peşte</string>
-    <string name="simple_mode_button_text_gradienter">Dezactivare Îndreptare</string>
+    <string name="simple_mode_button_text_gradienter">Dezactivați Îndreptare</string>
   <string name="simple_mode_button_text_groupshot">Dezactivare Selfie-uri de grup</string>
     <string name="simple_mode_button_text_hand_night">Dezactivaţi modul nocturn</string>
-    <string name="simple_mode_button_text_magic_mirror">Activați Oglinda Magică</string>
+    <string name="simple_mode_button_text_magic_mirror">Dezactivați Oglinda Magică</string>
     <string name="simple_mode_button_text_manual">Dezactivaţi modul manual</string>
-  <string name="simple_mode_button_text_mono">Dezactivare mod Alb-negru</string>
+  <string name="simple_mode_button_text_mono">Dezactivați modul Alb-negru</string>
     <string name="simple_mode_button_text_panorama">Dezactivaţi panorama</string>
   <string name="simple_mode_button_text_raw">Dezactivare mod RAW</string>
     <string name="simple_mode_button_text_scene">Dezactivaţi modul scenă</string>
