--- a/Romanian/main/MiuiScanner.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiScanner.apk/res/values-ro/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="accept">OK</string>
-    <string name="access_sd_fail">"Nu se poate accesa cardul SD"</string>
+    <string name="access_sd_fail">"Nu s-a putut accesa cardul SD"</string>
     <string name="accessibility_shutter_button">Obturator</string>
     <string name="action_search">Caută</string>
     <string name="address">Adresă:</string>
@@ -229,7 +229,7 @@
     <string name="document_ocr_result_title">Document fotografiat</string>
     <string name="document_ocr_tip_msg">Citire…</string>
     <string name="document_recognize_fail_tip">"Nu s-a putut citi documentul"</string>
-    <string name="document_rectify">Ajustare</string>
+    <string name="document_rectify">Ajustați</string>
     <string name="document_rectify_tip_msg">Ajustare…</string>
     <string name="document_save_succeed_tip">Document salvat în %1$s</string>
     <string name="document_title">Fotografiați documentul</string>
@@ -239,7 +239,7 @@
     <string name="email">E-mail:</string>
     <string name="error_camera_disabled">Accesul la Cameră a fost restricționat din motive de securitate</string>
     <string name="error_cannot_connect_camera">"Nu se poate conecta Camera"</string>
-    <string name="error_day_limit">Prea multe încercări în mai puțin de o zi</string>
+    <string name="error_day_limit">Prea multe încercări în decursul unei zile</string>
     <string name="error_empty_result">"Nu s-au găsit rezultate"</string>
     <string name="error_hour_limit">Prea multe încercări în mai puțin de o oră</string>
     <string name="error_image_error">"Nu se poate recunoaște această fotografie"</string>
@@ -292,7 +292,7 @@
     <string name="name">Nume:</string>
     <string name="namecard_recognize_failed_tip">"Nu s-a putut citi cardul"</string>
     <string name="namecard_recognizing">Citire…</string>
-    <string name="namecard_title">Așezați cartea de vizită în cadru</string>
+    <string name="namecard_title">Plasați cartea de vizită în cadru</string>
     <string name="namecard_vendor_info">Oferit de CamCard</string>
     <string name="nickname">Pseudonim:</string>
     <string name="no_network">"Nu se poate conecta la rețea"</string>
@@ -361,7 +361,7 @@
     <string name="translation_prompt_translating">Traducere în curs…</string>
     <string name="translation_prompt_translating_sentence">Traducere în curs…</string>
     <string name="translation_prompt_translating_word">Recunoaștere…</string>
-    <string name="translation_prompt_word">Încadrați cuvântul în interiorul cadrului</string>
+    <string name="translation_prompt_word">Plasați cuvântul în interiorul cadrului</string>
     <string name="translation_see_more">Vizualizați definiția</string>
     <string name="translation_type_sentence">Frază</string>
     <string name="translation_type_word">Cuvânt</string>
