--- a/Romanian/main/MiuiScreenRecorder.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiScreenRecorder.apk/res/values-ro/strings.xml
@@ -6,7 +6,7 @@
     <string name="auto_stop_title">Videoclip salvat cu succes</string>
     <string name="battery_not_allowed" formatted="false">"Nu se poate înregistra când acumulatorul are mai puțin de 3% disponibil. Asigurați-vă că aveți măcar 20% disponibil."</string>
     <string name="bit_rate">Calitatea videoclipului</string>
-    <string name="bit_rate_summary">Calitatea mai ridicată înseamnă fișiere mai mari</string>
+    <string name="bit_rate_summary">Calitate mai ridicată înseamnă fișiere mai mari</string>
     <string name="bubble_text">Atingeți pentru a începe înregistrarea</string>
     <string name="button_back">Înapoi</string>
     <string name="button_clear_storage">Eliberați spațiu</string>
@@ -34,7 +34,7 @@
     <string name="low_battery">Încărcați acumulatorul înainte de a începe înregistrarea</string>
     <string name="low_battery_title">Acumulator descărcat</string>
     <string name="low_battery_warning">Acumulatorul este descărcat. Înregistrarea s-a oprit și s-a salvat videoclipul.</string>
-    <string name="low_memory">Aveți mai puțin de 200MB spațiu de stocare disponibil. Mai puteți înregistra timp de 5 minute.</string>
+    <string name="low_memory">Aveți mai puțin de 200 MB spațiu de stocare disponibil. Mai puteți înregistra timp de 5 minute.</string>
     <string name="low_memory_title">Spațiu de stocare insuficient</string>
     <string name="low_momery_warning">Spațiu de stocare insuficient. Înregistrarea s-a oprit și s-a salvat videoclipul.</string>
     <string name="memory_not_allowed">Spațiu de stocare insuficient. Eliberați spațiu de stocare pentru a putea înregistra.</string>
@@ -46,7 +46,7 @@
     <string name="operation_send">Trimiteți</string>
     <string name="quit_recording">Ieșiți din Înregistrare ecran</string>
     <string name="resolution">Rezoluție</string>
-    <string name="resolution_summary">Videoclipurile la rezoluție mai mare arată mai clare</string>
+    <string name="resolution_summary">Videoclipurile la rezoluție mai mare arată mai clar</string>
     <string name="screen_orientation">Orientare</string>
     <string name="screen_orientation_summary">Orientarea videoclipurilor înregistrate</string>
     <string name="screen_record_option">Opțiuni înregistrare</string>
