--- a/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
@@ -132,7 +132,7 @@ expresie facială de sintetizat într-o fotografie"</string>
     <string name="pref_camera_coloreffect_entry_mirror">Oglindă</string>
     <string name="pref_camera_coloreffect_entry_mono">Monocrom</string>
     <string name="pref_camera_coloreffect_entry_mosaic">Mozaic</string>
-    <string name="pref_camera_coloreffect_entry_negative"/>Negativ</string>
+    <string name="pref_camera_coloreffect_entry_negative">Negativ</string>
     <string name="pref_camera_coloreffect_entry_none">Normal</string>
     <string name="pref_camera_coloreffect_entry_posterize">Posterizare</string>
     <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
@@ -167,7 +167,6 @@ expresie facială de sintetizat într-o fotografie"</string>
     <string name="pref_camera_exposuretime_entry_auto">Automat</string>
     <string name="pref_camera_face_info_watermark_title">Adaugă informațiile despre vârstă în fotografii</string>
     <string name="pref_camera_facedetection_title">Detectare faţă</string>
-    <string name="pref_camera_flashmode_default">auto</string>
     <string name="pref_camera_flashmode_entry_auto">Automat</string>
     <string name="pref_camera_flashmode_entry_off">Dezactivat</string>
     <string name="pref_camera_flashmode_entry_on">Activat</string>
