--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -85,7 +85,7 @@
   <string name="chinese_leap">Intercalare</string>
     <string name="chips_action_cancel">Renunțați</string>
     <string name="chips_action_copy">Copiați</string>
-    <string name="chips_permission_text">Permiteți sugestia de persoane din agendă</string>
+    <string name="chips_permission_text">Permiteți sugerarea de persoane din agendă</string>
   <string name="chongsha">Fantome</string>
     <string name="copy_email">Copiaţi adresa de e-mail</string>
     <string name="copy_number">Copiaţi numărul de telefon</string>
