--- a/Romanian/main/MusicFX.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MusicFX.apk/res/values-ro/strings.xml
@@ -1,28 +1,39 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="app_name">MusicFX</string>
     <string name="bass_boost_strength">Amplificare bass</string>
     <string name="ci_extreme">Amplificator FX</string>
+    <string name="classical">Clasic</string>
+    <string name="combo_device">Efecte disponibile numai la redarea în căști.</string>
+    <string name="dance">Dans</string>
+    <string name="eq_custom">Pentru a personaliza, selectați Personalizat</string>
     <string name="eq_dialog_title">Egalizator</string>
-    <string name="eq_preset_classical">Clasic</string>
-    <string name="eq_preset_dance">Dance</string>
-    <string name="eq_preset_flat">Flat</string>
-    <string name="eq_preset_folk">Folk</string>
-    <string name="eq_preset_heavymetal">Heavy Metal</string>
-    <string name="eq_preset_hiphop">Hip Hop</string>
-    <string name="eq_preset_jazz">Jazz</string>
-    <string name="eq_preset_normal">Normal</string>
-    <string name="eq_preset_pop">Pop</string>
-    <string name="eq_preset_rock">Rock</string>
+    <string name="flat">Plat</string>
+    <string name="folk">Folk</string>
     <string name="headset_plug">Pentru aceste efecte trebuie să conectaţi căştile.</string>
+    <string name="heavy_metal">Heavy Metal</string>
+    <string name="hip_hop">Hip Hop</string>
+    <string name="jazz">Jazz</string>
+    <string name="largehall">Sală mare</string>
+    <string name="largeroom">Cameră mare</string>
     <string name="main_toggle_effects_title">Efecte audio</string>
+    <string name="mediumhall">Sală medie</string>
+    <string name="mediumroom">Cameră medie</string>
     <string name="no_effects">Efectele nu sunt disponibile.</string>
-    <string name="picker_title">Pan. de cont. cu efecte muz.</string>
+    <string name="none">Niciunul</string>
+    <string name="normal">Normal</string>
+    <string name="picker_title">Panou de control efecte muzicale</string>
+    <string name="plate">Plat</string>
+    <string name="pop">Pop</string>
+    <string name="power_on_prompt">Atingeți butonul de oprire din drapta sus.</string>
     <string name="pr_dialog_title">Presetare pentru reverberaţii</string>
     <string name="pr_summary">Efecte suplimentare de reverberaţie în încăpere</string>
     <string name="pr_title">Reverberaţii:</string>
-    <string name="presetreverb_name">Presetări Reverb</string>
+    <string name="rock">Rock</string>
     <string name="setup">Configuraţi</string>
-    <string name="user">Utilizator</string>
+    <string name="smallroom">Cameră mică</string>
+    <string name="toggle_button_off">Oprit</string>
+    <string name="toggle_button_on">Pornit</string>
+    <string name="user">Personalizat</string>
     <string name="virtualizer_strength">Efect 3D</string>
 </resources>
